<resources>
    <string name="mp.app.name">Active Media Player</string>

    <string name="mp.list.layoutManager.linear">LinearLayoutManager</string>

    <!-- Common -->

    <string name="mp.cancel">Cancel</string>
    <string name="mp.Confirm">Confirm</string>

    <!-- Activity/Fragment Titles -->
    <string name="mp.fragment.title.play_list">Play List</string>
    <string name="mp.fragment.title.music">Music</string>
    <string name="mp.fragment.title.local_files">Local Files</string>
    <string name="mp.fragment.title.settings">Settings</string>
    <string name="mp.fragment.title.aboutus">Contact</string>




    <string name="mp.activity.title.file_system">SDCard</string>

    <!-- Play Lists -->
    <string name="mp.play_list.favorite">Favorite</string>
    <string name="mp.play_list.footer.add">Add play list</string>
    <string name="mp.play_list.footer.end_summary_formatter">%d play lists in total</string>

    <string name="mp.play_list.create">Create play list</string>
    <string name="mp.play_list.created">%s created</string>
    <string name="mp.play_list.edit">Edit Playlist</string>
    <string name="mp.play_list.dialog.hint">Play list name</string>
    <string name="mp.play_list.dialog.add_to">Add to play list</string>

    <plurals name="mp_play_list_items_formatter">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <!-- Play Lists - Details -->
    <string name="mp.play_list.details.empty">No music here, go add some!</string>
    <string name="mp.play_list.details.footer.end_summary_formatter">%d songs in total</string>

    <!-- Main -->
    <string-array name="mp_main_titles">
        <item>@string/mp.fragment.title.play_list</item>
        <item>@string/mp.fragment.title.music</item>
        <item>@string/mp.fragment.title.local_files</item>
        <item>@string/mp.fragment.title.settings</item>

    </string-array>

    <!-- Music -->

    <string name="mp.music.default_duration">00:00</string>

    <!-- Local Files -->
    <string name="mp.local_files.segmented.all">All</string>
    <string name="mp.local_files.segmented.folder">Folder</string>

    <string name="mp.local_files.music_list.empty">No music found on this device</string>
    <string name="mp.local_files.music_list.end_summary_formatter">%d songs in total</string>
    <string name="mp.local_files.folder_list.end_summary_formatter">%d folders in total</string>
    <string name="mp.local_files.folder_list.item_info_formatter" formatted="false">%d songs | %s</string>
    <string name="mp.local_files.folder_list.add_folder">Add Folder</string>

    <string name="mp.local_files.file_system.empty">No files under this directory</string>
    <string name="mp.local_files.file_system.menu.done">Done</string>

    <!-- Local Files - File System -->
    <plurals name="mp_folders_created_formatter">
        <item quantity="one">%d new folder created</item>
        <item quantity="other">%d new folders created</item>
    </plurals>
    <plurals name="mp_directory_items_formatter">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <plurals name="mp_selected_folders_formatter">
        <item quantity="one">%d folder selected</item>
        <item quantity="other">%d folders selected</item>
    </plurals>

    <!-- Menu -->
    <string name="mp.menu.add_to_play_list">Add to play list</string>
    <string name="mp.menu.create_play_list">Create play list</string>
    <string name="mp.menu.refresh">Refresh</string>
    <string name="mp.menu.play_now">Play now</string>
    <string name="mp.menu.rename">Rename</string>
    <string name="mp.menu.delete">Delete</string>
    <!--<string name="banner_ad_unit_id" translatable="false">ca-app-pub-6246253320597551/7223795829</string>-->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7241412616641279/9696861004</string>
    <!--<string name="fullscreen_ad_unit_id" translatable="false">ca-app-pub-6246253320597551/5607461825</string>-->
    <string name="fullscreen_ad_unit_id" translatable="false">ca-app-pub-7241412616641279/4635287774</string>

    <!--<string name="admobappid" translatable="false">ca-app-pub-6246253320597551~5747062621</string>-->
    <string name="admobappid" translatable="false">ca-app-pub-7241412616641279~3514596038</string>
    <string name="settingswelcometext">More features will come soon. Please stay in touch and enjoy our Media player.</string>
    <string name="uploadedby" translatable="false">Uploaded by: littlebitltd.com/</string>
    <string name="contactus">Contact Us: contact@littlebitltd.com</string>
    <string name="license" translatable="false">The MIT License (MIT)  Copyright (c) 2016 Ryan Hoo  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="checkourappbajar" translatable="false">Check Our AppBajar: https://appbajar.com</string>

</resources>
