<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <ScrollView
        android:layout_above="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:gravity="start"
        android:padding="20dip"

        android:textColor="?attr/colorAccent"
        android:text="@string/settingswelcometext"
        android:id="@+id/settingstv"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="20dip"
android:autoLink="all"
        android:textColor="?attr/colorAccent"
        android:text="@string/uploadedby"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="20dip"
        android:autoLink="all"
        android:textColor="?attr/colorAccent"
        android:text="@string/contactus"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="20dip"
        android:autoLink="all"
        android:textColor="?attr/colorAccent"
        android:text="@string/checkourappbajar"
        />



    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="10sp"
        android:gravity="start"
        android:padding="20dip"
        android:autoLink="all"
        android:textColor="?attr/colorAccent"
        android:text="@string/license"
        />
</LinearLayout>

    </ScrollView>
</RelativeLayout>